# fachwelt-agent-starter-python

./: .env.example  AGENTS.md  CONTEXT.md  Dockerfile  HARDENING_REPORT.md  livekit.toml  pyproject.toml  qa_e2e_roundtrip.py
audit-results/: pronunciation-2026-04-29.md  pronunciation-pls-proposal-iter5.xml
audit-results/voice-scout/: candidates.md  scoring.md
audit-results/voice-scout/final/: README.md
scripts/: pronunciation_audit.py  render_opener_takes.py  voice_scout.py  voice_scout_phase2.py  voice_scout_phase3.py
src/: agent.py  call_event_sink.py  call_health.py  call_session.py  config_loader.py  health.py  locked_blocks.py  observability.py  opener.py  watchdog.py
tests/: conversation_scenarios.yaml  pronunciation_words.yaml  test_agent.py  test_call_health.py  test_conversations.py  test_locked_prompt.py  test_opener_audio.py  test_resilience.py
